pathfinder/compiler/parser/Tests/bad-008.xq
(: an (: unterminated :) comment
42
